MODINREACH-577: refactor and remove unused code